Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,5 +1,147 @@
+<!doctype html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>etcd-ruby by ranjib</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
   <body>
-    etcd-ruby : Ruby bindings for etcd
+    <div class="wrapper">
+      <header>
+        <h1>etcd-ruby</h1>
+        <p>Bare minimal ruby client for etcd</p>
+
+        <p class="view"><a href="https://github.com/ranjib/etcd-ruby">View the Project on GitHub <small>ranjib/etcd-ruby</small></a></p>
+
+
+        <ul>
+          <li><a href="https://github.com/ranjib/etcd-ruby/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/ranjib/etcd-ruby/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/ranjib/etcd-ruby">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <p><a href="http://travis-ci.org/ranjib/etcd-ruby"><img src="https://secure.travis-ci.org/ranjib/etcd-ruby.png?branch=master" alt="Built on Travis"></a></p>
+
+<h1>
+<a name="etcd" class="anchor" href="#etcd"><span class="octicon octicon-link"></span></a>Etcd</h1>
+
+<p>A ruby client for <a href="https://github.com/coreos/etcd">etcd</a></p>
+
+<h2>
+<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
+
+<p>Add this line to your application's Gemfile:</p>
+
+<pre><code>gem 'etcd'
+</code></pre>
+
+<p>And then execute:</p>
+
+<pre><code>$ bundle
+</code></pre>
+
+<p>Or install it yourself as:</p>
+
+<pre><code>$ gem install etcd
+</code></pre>
+
+<h2>
+<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
+
+<h3>
+<a name="create-a-client-object" class="anchor" href="#create-a-client-object"><span class="octicon octicon-link"></span></a>Create a client object</h3>
+
+<div class="highlight highlight-ruby"><pre><span class="n">client</span> <span class="o">=</span> <span class="no">Etcd</span><span class="o">.</span><span class="n">client</span> <span class="c1"># this will create a client against etcd server running on localhost on port 4001</span>
+<span class="n">client</span> <span class="o">=</span> <span class="no">Etcd</span><span class="o">.</span><span class="n">client</span><span class="p">(</span><span class="ss">port</span><span class="p">:</span> <span class="mi">4002</span><span class="p">)</span>
+<span class="n">client</span> <span class="o">=</span> <span class="no">Etcd</span><span class="o">.</span><span class="n">client</span><span class="p">(</span><span class="ss">host</span><span class="p">:</span> <span class="s1">'127.0.0.1'</span><span class="p">,</span> <span class="ss">port</span><span class="p">:</span> <span class="mi">4003</span><span class="p">)</span>
+<span class="n">client</span> <span class="o">=</span> <span class="no">Etcd</span><span class="o">.</span><span class="n">client</span><span class="p">(</span><span class="ss">host</span><span class="p">:</span> <span class="s1">'127.0.0.1'</span><span class="p">,</span> <span class="ss">port</span><span class="p">:</span> <span class="mi">4003</span><span class="p">,</span> <span class="n">allow_redirect</span><span class="p">:</span> <span class="kp">false</span><span class="p">)</span> <span class="c1"># wont let you run sensitive commands on non-leader machines, default is true</span>
+</pre></div>
+
+<h3>
+<a name="set-a-key" class="anchor" href="#set-a-key"><span class="octicon octicon-link"></span></a>Set a key</h3>
+
+<div class="highlight highlight-ruby"><pre><span class="n">client</span><span class="o">.</span><span class="n">set</span><span class="p">(</span><span class="s1">'/nodes/n1'</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span>
+<span class="c1"># with ttl</span>
+<span class="n">client</span><span class="o">.</span><span class="n">set</span><span class="p">(</span><span class="s1">'/nodes/n2'</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">4</span><span class="p">)</span>  <span class="c1"># sets the ttl to 4 seconds</span>
+</pre></div>
+
+<h3>
+<a name="get-a-key" class="anchor" href="#get-a-key"><span class="octicon octicon-link"></span></a>Get a key</h3>
+
+<div class="highlight highlight-ruby"><pre><span class="n">client</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">'/nodes/n2'</span><span class="p">)</span><span class="o">.</span><span class="n">value</span>
+
+</pre></div>
+
+<h3>
+<a name="delete-a-key" class="anchor" href="#delete-a-key"><span class="octicon octicon-link"></span></a>Delete a key</h3>
+
+<div class="highlight highlight-ruby"><pre><span class="n">client</span><span class="o">.</span><span class="n">delete</span><span class="p">(</span><span class="s1">'/nodes/n1'</span><span class="p">)</span>
+<span class="n">client</span><span class="o">.</span><span class="n">delete</span><span class="p">(</span><span class="s1">'/nodes/'</span><span class="p">,</span> <span class="ss">recursive</span><span class="p">:</span> <span class="kp">true</span><span class="p">)</span>
+</pre></div>
+
+<h3>
+<a name="test-and-set" class="anchor" href="#test-and-set"><span class="octicon octicon-link"></span></a>Test and set</h3>
+
+<div class="highlight highlight-ruby"><pre><span class="n">client</span><span class="o">.</span><span class="n">test_and_set</span><span class="p">(</span><span class="s1">'/nodes/n2'</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">4</span><span class="p">)</span> <span class="c1"># will set /nodes/n2 's value to 2 only if its previous value was 4</span>
+
+</pre></div>
+
+<h3>
+<a name="watch-a-key" class="anchor" href="#watch-a-key"><span class="octicon octicon-link"></span></a>Watch a key</h3>
+
+<div class="highlight highlight-ruby"><pre><span class="n">client</span><span class="o">.</span><span class="n">watch</span><span class="p">(</span><span class="s1">'/nodes/n1'</span><span class="p">)</span> <span class="c1"># will wait till the key is changed, and return once its changed</span>
+</pre></div>
+
+<h3>
+<a name="list-sub-keys" class="anchor" href="#list-sub-keys"><span class="octicon octicon-link"></span></a>List sub keys</h3>
+
+<div class="highlight highlight-ruby"><pre><span class="n">client</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s1">'/nodes'</span><span class="p">)</span>
+</pre></div>
+
+<h3>
+<a name="get-machines-in-the-cluster" class="anchor" href="#get-machines-in-the-cluster"><span class="octicon octicon-link"></span></a>Get machines in the cluster</h3>
+
+<div class="highlight highlight-ruby"><pre><span class="n">client</span><span class="o">.</span><span class="n">machines</span>
+</pre></div>
+
+<h3>
+<a name="get-leader-of-the-cluster" class="anchor" href="#get-leader-of-the-cluster"><span class="octicon octicon-link"></span></a>Get leader of the cluster</h3>
+
+<div class="highlight highlight-ruby"><pre><span class="n">client</span><span class="o">.</span><span class="n">leader</span>
+</pre></div>
+
+<h2>
+<a name="contributors" class="anchor" href="#contributors"><span class="octicon octicon-link"></span></a>Contributors</h2>
+
+<ul>
+<li>Ranjib Dey</li>
+<li>Jesse Nelson</li>
+</ul><h2>
+<a name="contributing" class="anchor" href="#contributing"><span class="octicon octicon-link"></span></a>Contributing</h2>
+
+<ol>
+<li>Fork it</li>
+<li>Create your feature branch (<code>git checkout -b my-new-feature</code>)</li>
+<li>Commit your changes (<code>git commit -am 'Add some feature'</code>)</li>
+<li>Push to the branch (<code>git push origin my-new-feature</code>)</li>
+<li>Create new Pull Request</li>
+<li>If applicable, update the README.md</li>
+</ol>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/ranjib">ranjib</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
   </body>
 </html>
