Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>etcd-ruby by ranjib</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="etcd-ruby : Bare minimal ruby client for etcd" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>etcd-ruby</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>etcd-ruby</h1>
-        <p>Bare minimal ruby client for etcd</p>
 
-        <p class="view"><a href="https://github.com/ranjib/etcd-ruby">View the Project on GitHub <small>ranjib/etcd-ruby</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/ranjib/etcd-ruby">View on GitHub</a>
 
+          <h1 id="project_title">etcd-ruby</h1>
+          <h2 id="project_tagline">Bare minimal ruby client for etcd</h2>
 
-        <ul>
-          <li><a href="https://github.com/ranjib/etcd-ruby/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/ranjib/etcd-ruby/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/ranjib/etcd-ruby">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/ranjib/etcd-ruby/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/ranjib/etcd-ruby/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <p><a href="http://travis-ci.org/ranjib/etcd-ruby"><img src="https://secure.travis-ci.org/ranjib/etcd-ruby.png?branch=master" alt="Built on Travis"></a></p>
 
 <h1>
@@ -136,12 +139,17 @@
 <li>If applicable, update the README.md</li>
 </ol>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/ranjib">ranjib</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">etcd-ruby maintained by <a href="https://github.com/ranjib">ranjib</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
